<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.n2oapp.framework.security</groupId>
    <artifactId>security-admin</artifactId>
    <packaging>pom</packaging>
    <version>4.15-SNAPSHOT</version>

    <parent>
        <groupId>net.n2oapp.platform</groupId>
        <artifactId>n2o-platform-parent</artifactId>
        <version>3.0.0</version>
        <relativePath />
    </parent>

    <properties>
        <java.version>11</java.version>
        <n2o.version>7.8.1</n2o.version>
        <rdm.version>1.128.2</rdm.version>
        <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
        <config.server.enable>false</config.server.enable>
        <audit.version>2.3.2</audit.version>
        <nimbusds.version>7.9</nimbusds.version>
        <jacoco.skip>true</jacoco.skip>
    </properties>

    <scm>
        <connection>scm:git:https://git.i-novus.ru/framework/security-admin.git</connection>
        <url>https://git.i-novus.ru/framework/security-admin</url>
        <developerConnection>scm:git:https://git.i-novus.ru/framework/security-admin.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>security-admin-api</module>
        <module>security-admin-rest-api</module>
        <module>security-admin-rest-client</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.security.oauth.boot</groupId>
                <artifactId>spring-security-oauth2-autoconfigure</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>nimbus-jose-jwt</artifactId>
                <version>${nimbusds.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>production</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <config.server.enable>true</config.server.enable>
            </properties>
        </profile>

        <profile>
            <id>build-all-modules</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>auth-gateway</module>
                <module>auth-gateway-adapter</module>
                <module>security-auth</module>
                <module>security-auth-common</module>
                <module>security-auth-simple</module>
                <module>security-auth-oauth2</module>
                <module>security-auth-oauth2-gateway</module>
                <module>security-admin-impl</module>
                <module>security-admin-web</module>
                <module>security-admin-rest-server</module>
                <module>security-admin-sso-keycloak</module>
                <module>security-admin-commons</module>
                <module>security-admin-db</module>
                <module>security-admin-auth-server</module>
                <module>security-admin-backend</module>
                <module>security-admin-frontend</module>
                <module>security-admin-example</module>
                <module>keycloak-theme</module>
                <module>doc</module>
            </modules>
        </profile>
        <profile>
            <id>release</id>
            <activation>
                <property>
                    <name>release</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.7</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                            <stagingProgressTimeoutMinutes>10</stagingProgressTimeoutMinutes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.5</version>
                <configuration>
                    <destFile>${project.build.directory}/jacoco.exec</destFile>
                </configuration>
                <executions>
                    <execution>
                        <id>aggregate-report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.basedir}/../target/site/jacoco-aggregate</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>